--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
           <h1>Rafa's Website</h1>
         </div>
         <div id="navbar">
-            <a href="index3.html">Home</a>
+            <a href="index.html">Home</a>
         </div>
 
 <div id="content">
