--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <h1>Rafa's Website</h1>
     </div>
     <div id="navbar">
-        <a href="projects2.html">Projects</a>
+        <a href="projects.html">Projects</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact me</a>
     </div>
